# identified

./: docker-compose.yaml
identified_server/: .env_example  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yaml
identified_server/migrations/00000000000000_diesel_initial_setup/: up.sql
identified_server/migrations/2020-01-23-014552_create_initial/: down.sql  up.sql
identified_server/src/: api.rs  database.rs  lib.rs  main.rs
identified_server/src/api/: internal.rs  root.rs
identified_server/src/api/helpers/: authorization.rs
identified_server/src/database/: models.rs  schema.rs
identified_server/src/database/models/: internal_user.rs
identified_server/src/utils/: common.rs  errors.rs
