[package]
name = "identified"
version = "0.1.0"
authors = ["crtschin <csochinjensem@gmail.com>"]
edition = "2018"

[dependencies]
# Server framework
warp = { version = "0.2.5", features = ["tls"] }
tokio = { version = "0.2.9", features = ["full"] }

# Database ORM
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_ltree = "0.2.1"
r2d2 = "0.8.8"

# Env vars
dotenv = "0.15.0"

# Serialization
serde = { version = "1.0.104", features= ["derive"] }
serde_json = "1.0.44"
serde_bytes = "0.11.3"

# Misc
failure = "0.1.6"
chrono = { version = "0.4.10", features = ["serde"] }
ring = "0.16.9"
rand = "0.7.3"
md5 = "0.7.0"
openssl = "0.10"
listenfd = "0.3.3"
